//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  role Role [not null]
  Store Store
  storeId String
  Orders Orders [not null]
  Post Post [not null]
}

Table Store {
  id String [pk]
  name String [not null]
  description String
  address String [not null]
  updatedAt DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  products Product [not null]
  staff User [not null]
}

Table Product {
  id String [pk]
  name String [not null]
  description String [not null]
  price Float [not null]
  discount Float [not null]
  mediaUrl String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  store Store [not null]
  storeId String [not null]
  Orders Orders [not null]
  category Category [not null]
}

Table Orders {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]
  product Product [not null]
  productId String [not null]
  quantity Int [not null]
  status Status [not null, default: 'CART']
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Enum Role {
  MERCHANT
  CUSTOMER
}

Enum Status {
  CART
  BOUGHT
  DELIEVERED
}

Enum Category {
  FOOD
  ACCESSORIES
  TOYS
}

Ref: User.storeId > Store.id

Ref: Product.storeId > Store.id

Ref: Orders.userId > User.id

Ref: Orders.productId > Product.id

Ref: Post.authorId > User.id